fix: spacing

--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
     width: 100%;
 }
 .espace{
-    margin-bottom: 2%;
-    padding-left: 2%;
+    margin-bottom: 4%;
+    margin-left: 2%;
 }
 h1{
     text-align: center;
